--- a/fp2018/index.asciidoc
+++ b/fp2018/index.asciidoc
@@ -62,19 +62,25 @@ https://ruhaskell.org/links.html
 Неделя 1 (06 сентября)
 ----------------------
 
+link:01introduction.pdf[слайды]
+
 Про типы
 
 [[week2]]
 Неделя 2 (13 сентября)
 ----------------------
 
-Про списки
+link:02typedesign.pdf[слайды]
+
+Про дизайн собственных типов данных
 
 [[week3]]
 Неделя 3 (20 сентября)
 ----------------------
 
-qwer
+link:03.pdf[слайды]
+
+Несколько задач, стратегии вычислений, Fixpoint.
 
 [[week4]]
 Неделя 4 (27 сентября)
