--- a/fp2018/index.asciidoc
+++ b/fp2018/index.asciidoc
@@ -2,7 +2,7 @@
 :pygments-style: monokai
 :local-css-style: pastie
 
-Функциональное Программирование (матмех, осень 2017)
+Функциональное Программирование (матмех, осень 2018)
 ====================================================
 :Author: Dmitrii Kosarev a.k.a. Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
@@ -58,6 +58,13 @@ https://ruhaskell.org/links.html
 
 Курсы на степике "какие есть": https://stepik.org/course/75/ и https://stepik.org/course/693/ от Д.Москвина
 
+А к январю
+----------
+
+Стоило бы https://stepik.org/join-class/c1c9e25ba893da83ade391c83755dac408b4d90c[сдать] 
+второй курс Москвина на Степике, чтобы получить "допуск на вход" на экзамен.
+
+
 [[week1]]
 Неделя 1 (06 сентября)
 ----------------------
@@ -86,7 +93,15 @@ link:03.pdf[слайды]
 Неделя 4 (27 сентября)
 ----------------------
 
-Разгрузочный день
+link:04.pdf[слайды]
+
+Несколько задач, унификация.
+
+[[week5]]
+Неделя 5 (04 октября)
+---------------------
+
+Решаем/разбираем предыдущие задачи  в стиле "практики"
 
 // link:exercises6.html[Упражнения про исчисление высказываний и немного про списки]
 
